--- a/mens.css
+++ b/mens.css
@@ -29,34 +29,63 @@ h2 {
   margin-bottom: 20px;
   margin-left: 10px;
 }
-#category,
-#sizes,
-#brand,
-#colors,
-#design,
-#fit,
-#sleeve,
-#neck,
-#ratings,
-#discount,
-#sort {
-  font-size: large;
+#category {
   border: transparent;
-  width: 170px;
-  height: 20px;
+  width: 200px;
+}
+#sizes {
+  border: transparent;
+  width: 225px;
+}
+#brand {
+  border: transparent;
+  width: 222px;
+}
+#color {
+  border: transparent;
+  width: 225px;
+}
+#design {
+  border: transparent;
+  width: 214px;
+}
+#fit {
+  border: transparent;
+  width: 245px;
+}
+#sleeve {
+  border: transparent;
+  width: 215px;
+}
+#neck {
+  border: transparent;
+  width: 227px;
+}
+#ratings {
+  border: transparent;
+  width: 209px;
+}
+#discount {
+  border: transparent;
+  width: 201px;
+}
+#sort {
+  border: transparent;
+  width: 212px;
 }
 .mainbox {
-  border: 1px solid black;
-  width: 60%;
+  width: 56%;
   height: auto;
-  margin-left: 400px;
+  margin-left: 500px;
+  margin-top: -400px;
+  font-family: sans-serif;
+  font-size: small;
   /* margin-top: -325px; */
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
+  gap: 15px;
 }
 .productbox {
-  border: 1px solid black;
   height: 500px;
 }
 .productbox > img {
