--- a/mens.css
+++ b/mens.css
@@ -19,15 +19,21 @@ h2 {
   font-family: sans-serif;
 }
 .filters {
+  border: 1px solid yellow;
   display: grid;
   gap: 10px;
   margin-left: 160px;
   font-family: sans-serif;
+  width: 300px;
+  height: 500px;
+
 }
 .filters > h5 {
+  border: 2px solid yellow;
   color: gray;
   margin-bottom: 20px;
   margin-left: 10px;
+  width: 100px;
 }
 #category {
   border: transparent;
@@ -77,7 +83,7 @@ h2 {
   width: 56%;
   height: auto;
   margin-left: 500px;
-  margin-top: -400px;
+  margin-top: -500px;
   font-family: sans-serif;
   font-size: small;
   /* margin-top: -325px; */
