--- a/payment.css
+++ b/payment.css
@@ -28,6 +28,9 @@ body{
     width: 50%;
     margin-left: 8%;
 }
+#payment-price>h2{
+    font-size: 15px;
+}
 #payment-mode{
     border: 1px solid #eee;
     display: flex;
@@ -69,9 +72,20 @@ body{
     align-items: center;
 }
 #payment-debit>div>img{
-    width: 20px;
-    height: 20px;
-    margin: 0 3% 0 10%;
+    width: 35px;
+    height: 15px;
+    margin:5% 0% 5% 5%;
+}
+#left-payment-mode>button>div>img{
+    width: 25px;
+    height: 30px;
+    margin-left: 10px;
+}
+#left-payment-mode>button>div{
+    display: flex;
+}
+#left-payment-mode>button>div>p{
+    margin-left: 15px;
 }
 input{
     display: block;
@@ -191,9 +205,10 @@ width: 280px;
     transform: rotate(225deg);
 }
 #payment-net-banking>p{
-    font-size: 10px;
+    font-size: 18px;
     color: gray;
     padding: 0 20px;
+    text-align: right;
 }
 #payment-upi{
     border: 1px solid #eee;
@@ -212,7 +227,11 @@ width: 280px;
     margin-top: 10px;
 }
 #payment-upi>div>img{
-    height: 30px;
+    height: 15px;
+    margin-right: 5%;
+}
+#upi{
+    margin-left: 5%;
 }
 
 #payment-upi>div:nth-child(1)>p:nth-child(2){
@@ -228,9 +247,11 @@ width: 280px;
     width: 85%;
 }
 #payment-upi>p{
-    padding: 0 30px;
+    padding: 0 20px;
     color: gray;
     text-align: left;
+    font-size: 12px;
+    width: 95%;
 }
 #payment-upi>div:nth-child(2){
    margin-left: 20%;
@@ -247,7 +268,7 @@ width: 280px;
     margin-bottom: 10px;
 }
 #payment-cod-button>p:nth-child(1){
-    /* text-decoration: line-through; */
+    text-decoration: line-through;
     color: gray;
     font-size: 10px;
 }
@@ -255,7 +276,37 @@ width: 280px;
     color: #d29389;
     font-size: 10px;
 }
-
+#payment-cod{
+    border: 1px solid #eee;
+    border-radius: 5px;
+    margin: 10px;
+    text-align: center;
+    display: none;
+    width: 90%;
+}
+#payment-cod>div{
+    display: flex;
+    width: 100%;
+    margin: auto;
+    align-items: center;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+#payment-cod>div>p{
+    margin-left: 20px;
+    color: grey;
+}
+#payment-cod>button{
+    width: 90%;
+    padding: 15px 20px;
+    background-color: teal;
+    color: white;
+    font-size: 20px;
+    border: none;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
 /* #payment-wallet>div>input{
     border: 0px solid pink;
 }
@@ -267,3 +318,40 @@ width: 280px;
     border: 1px solid tomato;
     width: 100%;
 } */
+
+#payment-bnpl{
+    border: 1px solid #eee;
+    border-radius: 5px;
+    margin: 10px;
+    text-align: center;
+    display: none;
+    width: 90%;
+}
+#payment-bnpl>div{
+    display: flex;
+    width: 100%;
+    margin: auto;
+    align-items: center;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+#payment-bnpl>div>img{
+    width: 40px;
+    margin-left: 10px;
+    margin-right: 20px;
+}
+#payment-bnpl>div>P{
+    color: gray;
+}
+#payment-bnpl>div>input{
+    height: 20px;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+#payment-bnpl>p{
+    font-size: 12px;
+    color: grey;
+    text-align: left;
+    margin-left: 10px;
+}
