--- a/mens.css
+++ b/mens.css
@@ -2,6 +2,7 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  font-family: sans-serif;
 }
 .banner > img {
   width: 100%;
@@ -12,46 +13,59 @@ h2 {
   margin-bottom: 50px;
   font-family: sans-serif;
 }
-.filterhead{
-  border: 1px solid black;
+.filterhead {
+  /* border: 1px solid black; */
   margin-left: 180px;
   width: 100px;
   display: grid;
 }
-.content{
+.content {
   display: flex;
   width: 98%;
-  border: 1px solid yellow;
+  /* border: 1px solid yellow; */
   margin: auto;
 }
-.filters>div{
-  border: 1px solid red;
+.filters > div {
+  /* border: 1px solid red; */
   width: 280px;
   height: auto;
   margin: 50px 0 0 165px;
 }
-#category,#sizes,#brand,#color,#design,#fit,#sleeve,#neck,#ratings,#discount,#sort{
+#category,
+#sizes,
+#brand,
+#color,
+#design,
+#fit,
+#sleeve,
+#neck,
+#ratings,
+#discount,
+#sort {
   width: 100%;
   height: 35px;
   border: transparent;
   margin: auto;
-  font-family:sans-serif ;
+  font-family: sans-serif;
   font-size: medium;
 }
-.products{
-  border: 1px solid green;
+.products {
+  /* border: 1px solid green; */
   width: 55%;
   height: auto;
   margin: 0 0 0 50px;
   display: grid;
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 15px;
 }
-.productbox{
-  border: 1px solid greenyellow;
+.productbox {
+  /* border: 1px solid greenyellow; */
   height: auto;
 }
-.productbox>img{
+.productbox > img {
   width: 100%;
   height: 350px;
+}
+.productbox > h3 {
+  display: inline-block;
 }
