--- a/mensproductpage.css
+++ b/mensproductpage.css
@@ -87,6 +87,8 @@ h5 {
 }
 .sizelist {
   display: flex;
+  cursor: pointer;
+  
 }
 .sizelist > div > p:first-child {
   margin-left: 30px;
@@ -126,12 +128,14 @@ h5 {
 .cart > div:first-child {
   width: 55%;
   background-color: yellow;
+  cursor: pointer;
 }
 .cart > div:last-child {
   width: 35%;
   margin-left: 20px;
   border: 0.5px solid gray;
   justify-content: center;
+  cursor: pointer;
 }
 .cart > div > h3 {
   display: flex;
