--- a/navbar.css
+++ b/navbar.css
@@ -70,6 +70,7 @@
         font-size: 16px;
     }#logo_menu>li>a>img{
         width: 150px;
+        /* margin-left: 100px; */
         
     }
     #nav_search_bar
